# poetry-demo

./: .gitignore  Dockerfile  README.rst  demo_script.py  entrypoint.sh  pyproject.toml  setup.py
poetry_demo/: main.py
tests/: test_poetry_demo.py
