[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Alex Yang <ayang41@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pendulum = "^2.1.2"
numpy = "^1.19.4"
pandas = "^1.1.5"
scikit-learn = "^0.23.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

